@@ -1,3 +1,7 @@
+20180412
+--------
+Fixed #36961 - User names should be quoted in CONNECT statements
+
 20180410
 --------
 - Fixed #36498 - Issues addressing individual properties and their values
